clang/test/BSC/Negative/SafeZone/unsafe_param_or_return_type/unsafe_param_mutual_nested_struct.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

union U {};
struct S1;  // expected-note{{forward declaration of 'struct S1'}}
struct S2 { struct S1 s1; };  // expected-error{{field has incomplete type 'struct S1'}}
struct S3 { struct S2 s2; };
struct S1 { struct S3 s3; union U u; };

struct S4;  // expected-note{{forward declaration of 'struct S4'}}
struct S5 { struct S4 s4; }; // expected-error{{field has incomplete type 'struct S4'}}
struct S4 { struct S5 s5; };  

safe struct S1 unsafeReturnFunc(void) {} 

safe void unsafeParamFunc(struct S1 s1) {} 

safe struct S4 safeReturnFunc(void) {}

safe void safeParamFunc(struct S4 s4) {}